web app metatag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
 
         <title>ArduinoAQI</title>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <style type="text/css">
 
