click to refresh

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
             }
 
             #latest {
+                cursor: hand;
                 position: absolute;
                 top: 0;
                 right: 0;
                 padding: 7px;
+            }
+
+            #latest:hover, #latest:active {
+                opacity: 0.6;
             }
 
             #latest p, #latest h1, #latest h2, #latest h3 {
