--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             }
 
             #latest {
+                user-select: none;
                 cursor: hand;
                 position: absolute;
                 top: 0;
